первый норм коммит - начало
Создал приложение main, подключил шаблоны и статику, сделал роутинг, но не полностью

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,6 +8,7 @@
 
 {% block content %}
     <main class="main">
+        <h2><strong>{{ title }}</strong></h2>
         <p>{{ content }}</p>
     </main>
 {% endblock %}
