#2 Added catalog, product
Создал приложение каталог, подключил шаблоны и статику, добавил роут на эти страницы

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -29,14 +29,14 @@
 									Каталог
 								</a>
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="./goods/catalog.html">Все товары</a></li>
-									<li><a class="dropdown-item" href="#">Процессоры</a></li>
-									<li><a class="dropdown-item" href="#">Материнские платы</a></li>
-									<li><a class="dropdown-item" href="#">Видеокарты</a></li>
-									<li><a class="dropdown-item" href="#">Оперативная память</a></li>
-									<li><a class="dropdown-item" href="#">Блоки питания</a></li>
-									<li><a class="dropdown-item" href="#">Устройства хранения</a></li>
-									<li><a class="dropdown-item" href="#">Корпуса</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Все товары</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Процессоры</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Материнские платы</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Видеокарты</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Оперативная память</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Блоки питания</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Устройства хранения</a></li>
+									<li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">Корпуса</a></li>
 								</ul>
 							</div>
 							<div class="col-md-auto">
