--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -13,12 +13,20 @@
                 <div class="col-md-5">
                     <img src="{% static 'catalog/img/gigabyte_rtx_3080_ti.png' %}" alt>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-5">
                     <div class="row">
                         <p class="name-of-product"><b>Gigabyte Geforce RTX 3080ti</b></p>
                     </div>
                     <div class="row">
                         <p>id: 001</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex text-center align-items-center">
+                    <div class="row">
+                        <p>10000₽</p>
+                        <a class="btn btn-outline-dark" href="#">
+                            Купить
+                        </a>
                     </div>
                 </div>
             </div>
