--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -14,24 +14,30 @@
                     filter
                 </div>
                 <div class="col-md-10">
-                    <div class="row">
-                        <div class="product-card">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="{% static 'catalog/img/gigabyte_rtx_3080_ti.png' %}" alt>
-                                </div>
-                                <div class="col-md-8">
-                                    <a class="name-of-product" href="{% url 'catalog:product' %}"><b>Gigabyte Geforce RTX 3080ti</b></a>
+                    {% for product in products %}
+                        <div class="row">
+                            <div class="product-card">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <img src="{% static 'catalog/img/gigabyte_rtx_3080_ti.png' %}" alt>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <a class="name-of-product" href="{% url 'catalog:product' %}"><b>Gigabyte Geforce RTX 3080ti</b></a>
+                                    </div>
+                                    <div class="col-md-2 text-center">
+                                        <div class="row">
+                                            <p>10000₽</p>
+                                        </div>
+                                        <div class="row">
+                                            <a class="btn btn-outline-dark" href="#">
+                                                Купить
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row-md-12">
-                        product id 2
-                    </div>
-                    <div class="row-md-12">
-                        product id 3
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
