--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -16,17 +16,28 @@
                 <div class="col-md-10">
                     {% for product in products %}
                         <div class="row">
-                            <div class="product-card">
+                            <div class="product-card m-2">
                                 <div class="row">
-                                    <div class="col-md-4">
-                                        <img src="{% static 'catalog/img/gigabyte_rtx_3080_ti.png' %}" alt>
+                                    <div class="col-md-3">
+                                        {% if product.image %}
+                                            <img src="{{ product.image.url }}" alt="продукт">
+                                        {% else %}
+                                            <img src="{% static 'catalog\img\image_not_found.png' %}" alt="продукт">
+                                        {% endif %}
                                     </div>
-                                    <div class="col-md-6">
-                                        <a class="name-of-product" href="{% url 'catalog:product' %}"><b>Gigabyte Geforce RTX 3080ti</b></a>
+                                    <div class="col-md-7">
+                                        <a class="name-of-product" href="{% url 'catalog:product' product.slug %}"><b>{{ product.name }}</b></a>
+                                        <p>id: {{ product.display_id }}</p>
                                     </div>
                                     <div class="col-md-2 text-center">
                                         <div class="row">
-                                            <p>10000₽</p>
+                                            {% if product.sell_price != product.price %}
+                                                <span class="badge btn-dark text-dark"> Скидка {{ product.discount }}%</span>
+                                                <p><s>{{ product.price}}</s> ₽</p>
+                                                <p>{{ product.sell_price}} ₽</p>
+                                            {% else %}
+                                                <p>{{ product.sell_price}} ₽</p>
+                                            {% endif %}
                                         </div>
                                         <div class="row">
                                             <a class="btn btn-outline-dark" href="#">
