--- a/main/static/main/about.css
+++ b/main/static/main/about.css
@@ -16,13 +16,16 @@ body {
 }
 
 main.main {
-    align-items:flex-start;
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+    flex-direction: column;
 }
 
 .navbar-brand {
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 30px
 }
 
 #middle {
@@ -35,21 +38,4 @@ main.main {
     text-align: center;
     background: rgb(246, 243, 243);
     padding: 10px;
-}
-
-.name-of-product {
-    color: inherit;
-    text-decoration: none;
-}
-
-img {
-    width: 100%;
-}
-
-#filter {
-    align-items:flex-start;
-}
-
-.product-card {
-    align-items:flex-start;
 }
