--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static "main/index.css" %}">
+    <link rel="stylesheet" href="{% static "main/about.css" %}">
 {% endblock %}
 
 {% block content %}
