--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load catalog_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -29,6 +30,7 @@
 									Каталог
 								</a>
 								<ul class="dropdown-menu">
+                                    {% tag_categories as categories %}
                                     {% for category in categories %}
 									    <li><a class="dropdown-item" href="{% url 'catalog:mainpage' %}">{{ category.name }}</a></li>
                                     {% endfor %}
