--- a/templates/base.html
+++ b/templates/base.html
@@ -51,23 +51,27 @@
 									Конфигуратор
 								</a>
 							</div>
+                            {% if not user.is_authenticated %}
 							<div class="col-md-auto">
-								<a class="btn btn-outline-dark" href="./users/login.html">
+								<a class="btn btn-outline-dark" href="{% url 'user:login'  %}">
 									Войти
 								</a>
 							</div>
+                            {% else %}
 							<div class="col-md-auto">
 								<a class="btn btn-outline-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Мой профиль
 								</a>
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item" href="./carts/cart.html">Корзина</a></li>
-									<li><a class="dropdown-item" href="./users/profile.html">Личный кабинет</a></li>
-									<li><a class="dropdown-item" href="#">Админ панель</a></li>
+									<li><a class="dropdown-item" href="{% url 'user:profile'  %}">Личный кабинет</a></li>
+                                    {% if user.is_admin or user.is_staff %}
+                                        <li><a class="dropdown-item" href="{% url 'admin:index'  %}">Админ панель</a></li>
+                                    {% endif %}
 									<hr>
-									<li><a class="dropdown-item" href="#">Выйти</a></li>
+									<li><a class="dropdown-item" href="{% url 'user:logout'  %}">Выйти</a></li>
 								</ul>
 							</div>
+                            {% endif %}
 							<div class="col-md-auto">
 								<a class="btn btn-outline-dark" href="./carts/cart.html">
 									Корзина
@@ -85,6 +89,7 @@
 				</div>
                 <hr>
 			</header>
+            {% include 'includes/notifications.html'%}
             {% block content %}{% endblock %}
         </div>
         <footer class="footer">
