--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		{% block css %}{% endblock %}
-		<link rel="shortcut icon" href="{% static "main/img/favicon.ico" %}" type="image/x-icon">
+		<link rel="shortcut icon" href="{% static 'main/favicon.ico' %}" type="image/x-icon">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -73,7 +73,7 @@
 							</div>
                             {% endif %}
 							<div class="col-md-auto">
-								<a class="btn btn-outline-dark" href="./carts/cart.html">
+								<a class="btn btn-outline-dark" href="{% url 'user:users_cart'  %}">
 									Корзина
 								</a>
 							</div>
@@ -99,6 +99,6 @@
 		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="{% static "main/js/jquery/jquery-3.7.0.min.js" %}"></script>
-        <script src="{% static "main/js/jquery-events.js" %}"></script>
+        <script src="{% static "main/js/jquery-ajax.js" %}"></script>
 	</body>
 </html>
