--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -98,50 +98,14 @@
                     <h3 class="text-center mb-4">Корзина</h3>
                     <div class="container" id="cart-items-container">
                         <!-- Разметка корзины -->
-                        <div class="card mb-3">
-                            <div class="card-header">
-                                <h5 class="card-title">Товар</h5>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    <div class="row text-center" style="align-items: center;">
-                                        <div class="col p-0">
-                                            <div class="input-group" style="align-items: center;">
-                                                <span class="input-group-btn">
-                                                    <button type="button" class="btn btn-dark btn-sm decrement"
-                                                        data-cart-id="" data-cart-change-url="">-</button>
-                                                </span>
-                                                <input type="text" class="form-control number" value="1"
-                                                    readonly>
-                                                <span class="input-group-btn">
-                                                    <button type="button" class="btn btn-dark btn-sm increment"
-                                                        data-cart-id="" data-cart-change-url="">+</button>
-                                                </span>
-                                            </div>
-                                        </div>
-                                        <div class="col p-0">x 100.00 =</div>
-                                        <div class="col p-0"><strong>100.00 $</strong></div>
-                                        <div class="col p-0">
-                                            <a href="#" class="remove-from-cart" data-cart-id="">
-                                                <img class="mx-1" src="{% static 'users/img/garbage.png' %}"
-                                                    alt="Catalog Icon" width="16" height="16">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-footer">
-                                <p class="float-left">Итого <strong>1</strong> товар(а) на сумму</p>
-                                <h4 class="float-left"><strong>100.00 $</strong></h4>
-                            </div>
-                        </div>
+                        {% include 'carts/includes/included_cart.html' %}
                         <!-- Закончилась разметка корзины -->
                     </div>
-                    <a class="btn btn-dark" href="../orders/create_order.html">
+                {% if carts %}
+                    <a class="btn btn-outline-dark" href="../orders/create_order.html">
                         Оформить заказ
                     </a>
+                {% endif %}
                 </div>
             </div>
             <!-- Оформленные заказы -->
