--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -10,7 +10,6 @@
 {% endblock %}
 
 {% block content %}
-    {% user_carts request as carts %}
     <main class="main">
         <div class="container-fluid">
             <div class="row">
@@ -27,11 +26,12 @@
                                 <h3 class="text-center mb-7">Корзина</h3>
                                 <div class="container" id="cart-items-container">
                                     <!-- Разметка корзины -->
+                                    {% user_carts request as carts %}
                                     {% include 'carts/includes/included_cart.html' %}
                                     <!-- Закончилась разметка корзины -->
                                 </div>
                                 {% if carts %}
-                                    <a class="btn btn-outline-dark" href="../orders/create_order.html">
+                                    <a class="btn btn-outline-dark" href="{% url 'order:create_order' %}">
                                         Оформить заказ
                                     </a>
                                 {% endif %}
