--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -102,7 +102,7 @@
                         <!-- Закончилась разметка корзины -->
                     </div>
                 {% if carts %}
-                    <a class="btn btn-outline-dark" href="../orders/create_order.html">
+                    <a class="btn btn-outline-dark" href="{% url 'order:create_order' %}">
                         Оформить заказ
                     </a>
                 {% endif %}
