--- a/carts/templates/carts/includes/included_cart.html
+++ b/carts/templates/carts/includes/included_cart.html
@@ -58,3 +58,8 @@
         <h4 class="float-left"><strong>{{ carts.total_price}} ₽</strong></h4>
     </div>
 </div>
+{% if carts and not order %}
+    <a class="btn btn-outline-dark" href="{% url 'order:create_order' %}">
+        Оформить заказ
+    </a>
+{% endif %}
