--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -37,7 +37,25 @@ main.main {
     padding: 10px;
 }
 
-img {
-    width: 300px;
-    height: 300px;
+.name-of-product {
+    color: inherit;
+    text-decoration: none;
 }
+
+img {
+    width: 100%;
+}
+
+#filter {
+    align-items:flex-start;
+}
+
+.product-card {
+    align-items:flex-start;
+}
+
+.form {
+    position:sticky;
+    top:20px;
+}
+
