--- a/carts/templates/carts/includes/included_cart.html
+++ b/carts/templates/carts/includes/included_cart.html
@@ -32,7 +32,7 @@
                             <input type="text" class="form-control number" value="{{ cart.quantity }}"
                                 readonly>
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-outline-dark btn-sm increment"
+                                <button class="btn btn-outline-dark btn-sm increment"
                                     data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart:cart_change' %}">
                                     {% csrf_token %}+</button>
                             </span>
