--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load carts_tags %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'orders/create_order.css' %}">
 {% endblock %}
 
 {% block content %}
+    {% user_carts request as carts %}
     <main class="main">
         <div class="container">
             <div class="row mt-1">
@@ -92,7 +94,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        {% if carts.total_quantity %}
                                         <button type="submit" class="btn btn-dark">Оформить заказ</button>
+                                        {% endif %}
                                     </form>
                                 </div>
                             </div>
